2012-08-16  Iain Buclaw  <ibuclaw@ubuntu.com>

	* d-codegen.cc(libcall_ids): Re-order list in ascii collating order,
	add new library routines to lookup, rename all non-vararg functions to
	match DMD ABI implementation.
	(LibCall): Re-order enum and rename values to match libcall_ids.
	(IRState::toElemLvalue): Use new LibCall name.
	(IRState::getLibCallDecl): Update to match current library signatures,
	add implementation of new library routines.
	(IRState::maybeSetLibCallDecl): New function to set internal symbol
	for special D RT library functions.
	* d-decls.cc(FuncDeclaration::toSymbol): Use
	IRState::maybeSetLibCallDecl.
	* d-glue.cc(InExp::toElem): Use new LibCall name.
	(CatAssignExp::toElem): Likewise.
	(IndexExp::toElem): Likewise.
	(DeleteExp::toElem): Likewise.
	(RemoveExp::toElem): Likewise.
	(NewExp::toElem): Likewise.
	(ArrayLiteralExp::toElem): Likewise.
	(AssocArrayLiteralExp::toElem): Likewise.
	(NullExp::toElem): Use IRState::convertTo.

	* d-codegen.cc(needs_temp): Remove.
	(IRState::makeTemp): New function.
	(IRState::maybeMakeTemp): Re-implement to use isFreeOfSideEffects.
	(IRState::isFreeOfSideEffects): Re-implement to allow better CSE.
	(IRState::call): Use IRState::makeTemp.

	* d-builtins2.cc(gcc_type_to_d_type): Use d_convert_basic.
	* d-codegen.cc(IRState::emitLocalVar): Use IRState::vinit.
	(IRState::convertTo): New function for tree conversions.
	(IRState::convertTo): Use IRState::convertTo.
	(IRState::convertForCondition): Likewise.
	(IRState::darrayVal): Likewise.
	(IRState::pointerIntSum): Likewise.
	(IRState::pointerOffsetOp): Likewise.
	(IRState::pvoidOkay): Likewise.
	(IRState::boundsCond): Likewise.
	* d-convert.cc(convert): New function to be called from C.
	(d_build_truthvalue_op): Use d_convert_basic.
	* d-glue.cc(convert): Remove.
	(build_bool_binop): Use IRState::convertTo.
	(build_math_op): Likewise.
	(CmpExp::toElem): Likewise.
	(PowExp::toElem): Likewise.
	(do_array_set): Likewise.
	(AssignExp::toElem): Likewise.